# debug-tree

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  build.rs  dependabot.yml  eslint.config.js  package-lock.json  package.json  shell.nix  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-and-deploy-docs.yaml  build.yaml  check.yaml  ci.yaml  deploy-pages.yaml  postmerge.yaml  premerge.yaml  release.yaml  test.yaml
backend/app/: Cargo.toml  build.rs
backend/app/src/: flow.rs  fswatcher.rs  lib.rs  main.rs  utils.rs  web.rs
backend/app/src/actors/: git.rs
backend/app/src/web/: api.rs
backend/app/src/web/api/v1/: flows.rs  git.rs
backend/git2-ox/: Cargo.toml  README.md
backend/git2-ox/src/: branch.rs  commit.rs  diff.rs  error.rs  lib.rs  reference.rs  repository.rs  status.rs  tag.rs  utils.rs
backend/git2-ox/tests/: test_git_status.rs  test_repository.rs
backend/git2-ox/tests/common/: mod.rs
backend/git2_shim/: Cargo.toml
backend/git2_shim/src/: branch.rs  commit.rs  lib.rs  repository.rs
client/: eslint.config.js  index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/components/: header-node.tsx  icon-selector.tsx  node-header.tsx  nodes.tsx
client/src/components/ui/: button-variants.tsx
client/src/types/: nodes.ts
docs/: index.md
docs/.vitepress/: config.js  config.ts
docs/.vitepress/theme/: index.js  index.ts  styles.css
docs/backend/: introduction.md
docs/backend/api/: index.md
docs/backend/api/operations/: [operationId].md  [operationId].paths.js
docs/dev/: backend.md  frontend.md  index.md
docs/dev/api/: index.md
docs/dev/api/operations/: [operationId].md
docs/frontend/: introduction.md  logging.md
docs/introduction/: build-and-run.md  getting-started.md  usage.md  what-is-debug-flow.md
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  client.ts  index.css  keybindings.ts  main.tsx  store.ts
frontend/src/components/: action-button.tsx  app-control-panel.tsx  app-menubar.tsx  async-combobox.tsx  badge-group.tsx  base-handle.tsx  base-node.tsx  button-group.tsx  confirming-button.tsx  copy-button.tsx  create-git-rev.tsx  create-node-dialog.tsx  create-project-dialog.tsx  diff-viewer.tsx  dynamic-tooltip.tsx  edit-node-dialog.tsx  filterable-scroll-area.tsx  flows-dialog.tsx  gh-tabs.tsx  git-dialog.tsx  git-diff-view.tsx  git-graph-sliding-panel.tsx  git-reference-badge.tsx  git-revision.tsx  git-revisions-panel.tsx  git-stat.tsx  git-stats.tsx  git-status-card.tsx  help-dialog.tsx  icon-input.tsx  icon-select-content.tsx  icon-select.tsx  icon-selector.tsx  markdown-preview-textarea.tsx  node-form.tsx  node-header.tsx  nodes.tsx  project-dialog.tsx  select-trigger-icon.tsx  sliding-panel.tsx  (+3 more)
frontend/src/hooks/: use-event-stream.ts
frontend/src/lib/: errors.ts  logger.ts  logging.ts  notify.ts  sse.ts  testing.ts  utils.ts
frontend/src/types/: api-types.ts  api.ts  edge.ts  nodes.ts  state.ts
src/: flow.rs  lib.rs  main.rs  project.rs  tree.rs  web.rs
src/web/: api.rs
src/web/api/v1/: debug_flows.rs  (+3 more)
(+17 files in other folders)
