[package]
name = "debug-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "^4.5.40", features = ["derive"] }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
thiserror = "^2.0.12"
axum = { version = "^0.8.4", features = ["macros"] }
tokio = { version = "^1.45.1", features = ["full"] }
tower-http = { version = "^0.6.6", features = ["fs", "trace"] }
mime_guess = "^2.0"
rust-embed = { version = "^8.7", features = [
    "compression",
    "debug-embed",
    "include-exclude",
] }
log = "^0.4.27"
axum-reverse-proxy = "^1.0.2"
env_logger = "0.11.8"
