[package]
name = "git2_shim"
version = "0.1.0"
edition = "2024"


[dependencies]
log = "^0.4.27"
utoipa = { version = "^5.3.1", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "^0.2.0" }
serde = { version = "^1.0.219", features = ["derive"] }
serde_json = "^1.0.140"
thiserror = "^2.0.12"
chrono = { version = "^0.4.41", features = ["serde"] }
git2 = "0.20.2"
